# trialCEBRA

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml
.github/workflows/: tests.yml
src/cebra_trial/: __init__.py  cebra.py  dataset.py  distribution.py
src/trial_cebra/: __init__.py  cebra.py  distribution.py  epochs.py  multisession.py
tests/: conftest.py  test_cebra.py  test_dataset.py  test_distribution.py  test_epochs.py  test_multisession.py
workflows/: tests.yml
