[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trial_cebra"
dynamic = ["version"]
description = "Trial-aware contrastive learning wrapper for CEBRA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cebra",
    "plotly>=6.6.0",
    "torch>=2.10.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/trial_cebra"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pre-commit>=3.5",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
